Name:                ccs
Version:             0.1
-- Synopsis:            
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Fernando Serboncini
Maintainer:          fserb@fserb.com.br
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.2

Executable ccs
  Main-is: ccs.hs
  
  Build-depends:
    base == 4.*,  
    binary == 0.5.*,
    bytestring == 0.9.*, 
    filepath == 1.1.*,
    magic == 1.0.*,
    MissingH == 1.1.*,
    regex-pcre == 0.94.*,
    regex-base == 0.93.*

  -- Other-modules:       
  -- Build-tools:         
  