Name:                ccs
Version:             0.1
Synopsis:            Chrome Cache Sniffer
Description:         Sniff Google's Chrome cache directory and dumps
		     all music/video files in a directory.
License:             BSD3
License-file:        LICENSE
Author:              Fernando Serboncini
Maintainer:          fserb@fserb.com.br
Stability:           Experimental
Category:            Web
Build-type:          Simple

Cabal-version:       >=1.6

Executable ccs
  Main-is: ccs.hs
  
  Build-depends:
    base == 4.*,  
    binary == 0.5.*,
    containers == 0.3.*,
    SHA == 1.4.*,
    bytestring == 0.9.*, 
    filepath == 1.1.*,
    magic == 1.0.*,
    MissingH == 1.1.*,
    regex-pcre == 0.94.*,
    regex-base == 0.93.*,
    url == 2.1.*

  Other-modules: 
    Cache, Dump

  -- Build-tools:         
  